# fisk

./: .eslintignore  .eslintrc  .gitignore  .gitmodules  .npmignore  CMakeLists.txt  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
builder/: Client.ts  Compile.ts  CompileFinished.ts  CompileJob.ts  Contents.ts  J.ts  Job.ts  ObjectCache.ts  ObjectCacheItem.ts  ObjectCachePendingItem.ts  Response.ts  Server.ts  VM.ts  VMMessage.ts  VM_runtime.ts  client.js  client.ts  compile.ts  compilejob.ts  fisk-builder.js  fisk-builder.ts  load.ts  objectcache.js  objectcache.ts  quit-on-error.js  quit-on-error.ts  quitOnError.ts  response.ts  server.js  server.ts
clang-check/: fisk-clang-check.js  fisk-clang-check.js.map
client/: BuilderWebSocket.cpp  BuilderWebSocket.h  CMakeLists.txt  Client.cpp  Client.h  CompilerArgs.cpp  CompilerArgs.h  Config.cpp  Config.h  DaemonSocket.cpp  DaemonSocket.h  JobReceiver.h  Log.cpp  Log.h  Preprocessed.cpp  Preprocessed.h  SchedulerWebSocket.cpp  SchedulerWebSocket.h  Select.cpp  Select.h  SlaveWebSocket.cpp  SlaveWebSocket.h  SlotAcquirer.h  Watchdog.cpp  Watchdog.h  WebSocket.cpp  WebSocket.h  build.ninja  create-create-fisk-env.cmake  create-fisk-env  create-npm-version.cmake  main.cpp  npm-version.py
common/: FetchCacheObjectsMessage.ts  ObjectCacheMessage.ts  common.js  index.js  index.ts  package-lock.json  package.json
daemon/: Client.ts  ClientBuffer.ts  Compile.ts  Server.ts  Slots.ts  client.js  client.ts  clientbuffer.js  clientbuffer.ts  compile.js  compile.ts  constants.js  constants.ts  fisk-daemon.js  fisk-daemon.ts  server.js  server.ts  slots.js  slots.ts
deployment/fisk-builder/DEBIAN/: control  postinst  prerm
deployment/fisk-client/DEBIAN/: control  postinst  prerm
deployment/fisk-scheduler/DEBIAN/: control  postinst  prerm
deployment/fisk-slave/DEBIAN/: control  postinst  prerm
envuploader/: envuploader.js  icecc-create-env  index.js  package-lock.json  package.json
monitor/: fisk-monitor.js
proxy/: fisk-proxy.js
scheduler/: Builder.ts  CacheHitMessage.ts  Client.ts  Compile.ts  Database.ts  DatabaseRecord.ts  Environment.ts  Environments.ts  EnvironmentsMessage.ts  File.ts  JobFinishedMessage.ts  JobScheduledMessage.ts  JobStartedMessage.ts  LinkProperties.ts  Links.ts  LoadMessage.ts  MonitorMessage.ts  ObjectCacheAddedOrRemovedMessage.ts  ObjectCacheManager.ts  ObjectCacheManagerMessage.ts  ObjectCacheMessage.ts  Peak.ts  SHA1Data.ts  Server.ts  database.js  environments.js  fisk-scheduler.js  fisk-scheduler.ts  index.js  objectcache.js  objectcachemanager.js  ocache.js  package-lock.json  package.json  peak.js  prettySize.ts  scheduler.js  server.js  untarFile.ts  usertester.js
scheduler/public/: index.html
scheduler/src/: environments.js  scheduler.js  server.js
scripts/: hack-posix-rollup.js
slave/: VM.js  VM_runtime.js  client.js  compile.js  fisk-slave.js  index.js  load.js  objectcache.js  package-lock.json  package.json  server.js  service.js  slave.js
slave/src/: VM.js  VM_runtime.js  client.js  compile.js  load.js  server.js  slave.js
src/builder/: Client.ts  CompileFinishedEvent.ts  CompileJob.ts  J.ts  Job.ts  JobData.ts  JobState.ts  ObjectCache.ts  ObjectCacheItem.ts  ObjectCachePendingItem.ts  Response.ts  Server.ts  VM.ts  VMMessage.ts  fisk-builder.ts  load.ts  quitOnError.ts
src/builder/VM_runtime/: Compile.ts  ExitEvent.ts  VM_runtime.ts
src/clang-check/: align.ts  clang-check.ts  exec.ts  matchContains.ts  matchExact.ts  matchRegex.ts  options.ts  parallelize.ts  post.ts  sha1.ts
src/client/: .clang-format  BuilderWebSocket.cpp  BuilderWebSocket.h  CMakeLists.txt  Client.cpp  Client.h  CompilerArgs.cpp  CompilerArgs.h  Config.cpp  Config.h  DaemonSocket.cpp  DaemonSocket.h  DwarfPatcher.cpp  DwarfPatcher.h  Log.cpp  Log.h  Preprocessed.cpp  Preprocessed.h  SchedulerWebSocket.cpp  SchedulerWebSocket.h  Select.cpp  Select.h  Watchdog.cpp  Watchdog.h  WebSocket.cpp  WebSocket.h  create-create-fisk-env.cmake  create-fisk-env  create-npm-version.cmake  main.cpp  npm-version.sh
src/common/: BuilderAddedOrRemovedMessage.ts  DropEnvironmentsMessage.ts  FetchCacheObjectsMessage.ts  JobMonitorMessage.ts  index.js  index.ts
src/common-ts/: index.ts
src/daemon/: Client.ts  ClientBuffer.ts  Compile.ts  CompilerInfoCache.ts  Constants.ts  Server.ts  Slots.ts  fisk-daemon.ts
src/fisk-native/: CMakeLists.txt  fisk-native.cpp  index.d.ts  index.js  index.mjs  package.json
src/monitor/: fisk-monitor.ts
src/scheduler/: Builder.ts  CacheHitMessage.ts  Client.ts  Compile.ts  Database.ts  Environment.ts  Environments.ts  File.ts  JobAbortedMessage.ts  JobScheduledMessage.ts  JobStartedMessage.ts  LinkProperties.ts  Links.ts  LogMessage.ts  NodeData.ts  ObjectCacheAddedOrRemovedMessage.ts  ObjectCacheManager.ts  ObjectCacheManagerMessage.ts  ObjectCacheMessage.ts  Peak.ts  PeakData.ts  SHA1Data.ts  Server.ts  fisk-scheduler.ts  klung.ts  untarFile.ts
src/scheduler/public/: index.html
src/typings/: blessed.d.ts  mktemp.d.ts
ui/: angular.json  package-lock.json  package.json
ui/src/: index.html  styles.css
ui/src/app/: app.component.html  app.component.ts  app.module.ts  backoff.service.spec.ts  backoff.service.ts  config.service.ts  fisk.service.spec.ts  fisk.service.ts  message.service.ts  tab-changed.service.spec.ts  tab-changed.service.ts  websocket.service.spec.ts  websocket.service.ts
ui/src/app/chart/: chart.component.html  chart.component.ts
ui/src/app/compilers/: compilers.component.dialog.css  compilers.component.dialog.html  compilers.component.html  compilers.component.spec.ts  compilers.component.ts
ui/src/app/config/: config.component.html  config.component.ts
ui/src/app/log/: log.component.css  log.component.html  log.component.ts
ui/src/app/logs/: logs.component.css  logs.component.html  logs.component.ts
ui/src/app/main/: main.component.html  main.component.ts
ui/src/app/new-chart/: new-chart.component.html  new-chart.component.spec.ts  new-chart.component.ts
ui/src/app/pie-chart/: pie-chart.component.html  (+1 more)
(+19 files in other folders)
